--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "^0.0.4",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "swiper": "^5.2.1"
   },
