补漏第一天

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "better-scroll": "^1.15.2",
     "eject": "^0.0.4",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "redux-immutable": "^4.0.0",
     "swiper": "^5.2.1"
   },
   "scripts": {
