--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.3.0",
     "react-transition-group": "^4.3.0",
     "redux-immutable": "^4.0.0",
+    "serve": "^11.2.0",
     "swiper": "^5.2.1"
   },
   "scripts": {
